--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -29,7 +29,11 @@
         <h2 class="subtitle is-size-4 has-text-light">
             There's always a trip for everyone
         </h2>
+    </div>
+</section>
 
+<section class="section" style="margin-top:-8rem">
+    <div class="container">
         <div class="box searchbar-container" style="margin: 0 8rem;">
             <div class="field has-addons">
                 <div class="control is-expanded">
@@ -96,10 +100,8 @@
 
 <section class="section">
     <div class="container">
-        <div class="box">
-            <div class="columns is-multiline" id='displayListings'>
-                {% include 'components/listing-card.html' %}
-            </div>
+        <div class="columns is-multiline" id='displayListings'>
+            {% include 'components/listing-card.html' %}
         </div>
     </div>
 </section>
