Update to new UI

--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -30,7 +30,7 @@
 {% block nav %}
 
 
-    <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item has-text-weight-bold" href="{{ url_for('adminDashboard') }}"><img src="/logo.png">&emsp;<span
