--- a/templates/baseTour.html
+++ b/templates/baseTour.html
@@ -8,6 +8,7 @@
         <title>Tourisit - Tours by locals.</title>
         <link rel="stylesheet" href="/css/frameworks/bulma.min.css">
         <link rel="stylesheet" href="/css/global/navbar.css">
+        <link rel="stylesheet" href="/css/dashboards/workdesk.css">
         <link rel="stylesheet"
               href="https://cdn.jsdelivr.net/npm/@creativebulma/bulma-tooltip@1.2.0/dist/bulma-tooltip.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -32,7 +33,7 @@
 {% block nav %}
 
 
-    <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item has-text-weight-bold" href="{{ url_for('sellerDashboard') }}"><img
