--- a/templates/customer/favourites.html
+++ b/templates/customer/favourites.html
@@ -7,19 +7,11 @@
 
 
 {% block content %}
-    <section id="discover-hero" class="hero is-medium is-link is-bold">
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
-                    Favourite <i class="fas fa-heart"></i>
-                </h1>
-                <h2 class="subtitle is-size-4">
-                    Trips on your To Do list
-                </h2>
-            </div>
-            <br>
-        </div>
-    </section>
+<section class="section has-background-white">
+    <div class="container">
+        <h1 class="is-size-1 has-text-weight-bold mt-6">Your Favourites</h1>
+    </div>
+</section>
 
 
     <section class="section">
