--- a/templates/setting.html
+++ b/templates/setting.html
@@ -10,10 +10,14 @@
 
 {% block content %}>
 
+<section class="section has-background-white">
     <div class="container">
-        <h1 class="is-size-1 has-text-weight-bold mt-6">My Settings</h1>
-        <div class="columns">
+        <h1 class="is-size-1 has-text-weight-bold mt-6">Account Settings & Preferences</h1>
+    </div>
+</section>
 
+    <div class="container">
+        <div class="columns">
             <!-- Side Profile Page -->
             <div class="column is-one-fifth">
                 <div class="section">
