--- a/templates/tourGuides/ownlisting.html
+++ b/templates/tourGuides/ownlisting.html
@@ -6,18 +6,11 @@
 {% endblock %}
 
 {% block content %}
-    <section class='hero is-medium is-success is-bold'>
-        <div class='hero-body'>
-            <div class="container">
-                <h1 class="title is-size-1 has-text-weight-bold">
-                    Tours
-                </h1>
-                <h2 class="subtitle">
-                    By HidethePain
-                </h2>
-            </div>
-        </div>
-    </section>
+<section class="section has-background-white">
+    <div class="container">
+        <h1 class="is-size-1 has-text-weight-bold mt-6">My tours</h1>
+    </div>
+</section>
 
     <section class="section">
         <div class="container">
