--- a/public/css/dashboards/workdesk.css
+++ b/public/css/dashboards/workdesk.css
@@ -1,6 +1,12 @@
-#workdesk-hero {
+#hero-box {
+    padding-top: 6rem;
+}
+
+#hero-content {
     background: url("/imgs/workdesk.jpg") center scroll no-repeat;
     background-size: cover;
-    background-color: rgba(0, 0, 0, 0.55);
+    background-color: rgba(0, 0, 0, 0.4);
     background-blend-mode: overlay;
+    padding: 5rem 0;
+    text-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
