--- a/public/css/global/navbar.css
+++ b/public/css/global/navbar.css
@@ -8,7 +8,7 @@
     background-size: cover;
 }
 
-.navbar.is-white {
+.navbar {
     background-color: rgba(255, 255, 255, 0.8) !important;
     backdrop-filter: saturate(180%) blur(20px);
     -webkit-backdrop-filter: saturate(180%) blur(20px);
