--- a/templates/tourGuides/allBusinesses.html
+++ b/templates/tourGuides/allBusinesses.html
@@ -4,174 +4,170 @@
 
 
 {% block scripts %}
-    <link rel="stylesheet" href="/css/global/shop.css">
-    <link rel="stylesheet" href="/css/all_bookings.css">
+<link rel="stylesheet" href="/css/global/shop.css">
+<link rel="stylesheet" href="/css/all_bookings.css">
 {% endblock %}
 
 
 {% block content %}
-    <section class='hero is-medium is-black' id='bookings-hero'>
-        <div class='hero-body'>
-            <div class="container">
-                <h1 class="title is-size-1 has-text-weight-bold">
-                    Your Business
-                </h1>
-            </div>
-        </div>
-    </section>
+<section class="section has-background-white">
+    <div class="container">
+        <h1 class="is-size-1 has-text-weight-bold mt-6">Your Business</h1>
+    </div>
+</section>
 
-    <section class="section">
-        <div class="container">
-            <div class="box">
-                <div class="columns">
-                    <div class="column is-half">
-                        <p class="subtitle">Upcoming Tours</p>
-                        <table class='table is-striped is-fullwidth'>
-                            <tr>
-                                <td>07 Jan</td>
-                                <td><a href="{{ url_for('business') }}">Bishan Nightlife</a></td>
-                            </tr>
-                            <tr>
-                                <td>07 Jan</td>
-                                <td><a href="{{ url_for('business') }}">Bishan Nightlife</a></td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="column is-half">
-                        <p class="subtitle">Required Action</p>
-                        <table class='table is-striped is-fullwidth'>
-                            <tr>
-                                <td><b>Chinatown - A New View</b></td>
-                                <td><a href="{{ url_for('business') }}">Confirm Tour</a></td>
-                            </tr>
-                            <tr>
-                                <td><b>Best of Kampong Glam</b></td>
-                                <td><a href="{{ url_for('business') }}">Review Custom Itinerary</a></td>
-                                <td><a href="{{ url_for('business') }}">Leave Feedback</a></td>
-                            </tr>
-                        </table>
-                    </div>
+<section class="section">
+    <div class="container">
+        <div class="box">
+            <div class="columns">
+                <div class="column is-half">
+                    <p class="subtitle">Upcoming Tours</p>
+                    <table class='table is-striped is-fullwidth'>
+                        <tr>
+                            <td>07 Jan</td>
+                            <td><a href="{{ url_for('business') }}">Bishan Nightlife</a></td>
+                        </tr>
+                        <tr>
+                            <td>07 Jan</td>
+                            <td><a href="{{ url_for('business') }}">Bishan Nightlife</a></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="column is-half">
+                    <p class="subtitle">Required Action</p>
+                    <table class='table is-striped is-fullwidth'>
+                        <tr>
+                            <td><b>Chinatown - A New View</b></td>
+                            <td><a href="{{ url_for('business') }}">Confirm Tour</a></td>
+                        </tr>
+                        <tr>
+                            <td><b>Best of Kampong Glam</b></td>
+                            <td><a href="{{ url_for('business') }}">Review Custom Itinerary</a></td>
+                            <td><a href="{{ url_for('business') }}">Leave Feedback</a></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
-        </div>
-    </section>
+    </div>
+    </div>
+</section>
 
-    <!--START: Dropdown-->
-    <section class='section'>
-        <div class='container has-text-centered'>
-            <div class="control">
-                <div class="select">
-                    <select>
-                        <option>Ongoing Jobs</option>
-                        <option>Completed</option>
-                    </select>
+<!--START: Dropdown-->
+<section class='section'>
+    <div class='container has-text-centered'>
+        <div class="control">
+            <div class="select">
+                <select>
+                    <option>Ongoing Jobs</option>
+                    <option>Completed</option>
+                </select>
+            </div>
+        </div>
+    </div>
+</section>
+<!--END: Dropdown-->
+<section>
+    <!--START: Card -->
+    <div class='container mt-5'>
+        <div class='box p-5'>
+            <a href="{{ url_for('business') }}">
+                <div class="columns is-vcentered">
+                    <div class="column">
+                        <div class="ml-4">
+                            <span class="tag is-info is-light mb-4">Planning</span>
+                            <div class="mb-2 listing-author">
+                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                <div class="ml-2"><b>HidethePain</b> is buying:</div>
+                            </div>
+                            <h1 class='title'>Bishan Nightlife</h1>
+                            <p class="subtitle">Explore the night life of Bishan</p>
+                        </div>
+                    </div>
+                    <div class="column is-two-fifths">
+                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
-    </section>
-    <!--END: Dropdown-->
-    <section>
-        <!--START: Card -->
-        <div class='container mt-5'>
-            <div class='box p-5'>
-                <a href="{{ url_for('business') }}">
-                    <div class="columns is-vcentered">
-                        <div class="column">
-                            <div class="ml-4">
-                                <span class="tag is-info is-light mb-4">Planning</span>
-                                <div class="mb-2 listing-author">
-                                    <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                    <div class="ml-2"><b>HidethePain</b> is buying:</div>
-                                </div>
-                                <h1 class='title'>Bishan Nightlife</h1>
-                                <p class="subtitle">Explore the night life of Bishan</p>
+    </div>
+    <!--END: Card-->
+    <!--START: Card -->
+    <div class='container mt-5'>
+        <div class='box p-5'>
+            <a href="{{ url_for('business') }}">
+                <div class="columns is-vcentered">
+                    <div class="column">
+                        <div class="ml-4">
+                            <span class="tag is-success is-light mb-4">Confirmed</span>
+                            <div class="mb-2 listing-author">
+                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                <div class="ml-2"><b>HidethePain</b> is buying:</div>
                             </div>
-                        </div>
-                        <div class="column is-two-fifths">
-                            <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                            <h1 class='title'>Bishan Nightlife</h1>
+                            <p class="subtitle">Explore the night life of Bishan</p>
                         </div>
                     </div>
-                </a>
-            </div>
+                    <div class="column is-two-fifths">
+                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                    </div>
+                </div>
+            </a>
         </div>
-        <!--END: Card-->
-        <!--START: Card -->
-        <div class='container mt-5'>
-            <div class='box p-5'>
-                <a href="{{ url_for('business') }}">
-                    <div class="columns is-vcentered">
-                        <div class="column">
-                            <div class="ml-4">
-                                <span class="tag is-success is-light mb-4">Confirmed</span>
-                                <div class="mb-2 listing-author">
-                                    <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                    <div class="ml-2"><b>HidethePain</b> is buying:</div>
-                                </div>
-                                <h1 class='title'>Bishan Nightlife</h1>
-                                <p class="subtitle">Explore the night life of Bishan</p>
+    </div>
+    <!--END: Card-->
+    <!--START: Card -->
+    <div class='container mt-5'>
+        <div class='box p-5'>
+            <a href="{{ url_for('business') }}">
+                <div class="columns is-vcentered">
+                    <div class="column">
+                        <div class="ml-4">
+                            <span class="tag is-warning is-light mb-4">Completed</span>
+                            <div class="mb-2 listing-author">
+                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                <div class="ml-2"><b>HidethePain</b> is buying:</div>
                             </div>
-                        </div>
-                        <div class="column is-two-fifths">
-                            <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                            <h1 class='title'>Bishan Nightlife</h1>
+                            <p class="subtitle">Explore the night life of Bishan</p>
                         </div>
                     </div>
-                </a>
-            </div>
+                    <div class="column is-two-fifths">
+                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                    </div>
+                </div>
+            </a>
         </div>
-        <!--END: Card-->
-        <!--START: Card -->
-        <div class='container mt-5'>
-            <div class='box p-5'>
-                <a href="{{ url_for('business') }}">
-                    <div class="columns is-vcentered">
-                        <div class="column">
-                            <div class="ml-4">
-                                <span class="tag is-warning is-light mb-4">Completed</span>
-                                <div class="mb-2 listing-author">
-                                    <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                    <div class="ml-2"><b>HidethePain</b> is buying:</div>
-                                </div>
-                                <h1 class='title'>Bishan Nightlife</h1>
-                                <p class="subtitle">Explore the night life of Bishan</p>
+    </div>
+    <!--END: Card-->
+    <!--START: Card -->
+    <div class='container mt-5'>
+        <div class='box p-5'>
+            <a href="{{ url_for('business') }}">
+                <div class="columns is-vcentered">
+                    <div class="column">
+                        <div class="ml-4">
+                            <span class="tag is-info is-light mb-4">Planning</span>
+                            <span class="tag is-success is-light mb-4">Confirmed</span>
+                            <span class="tag is-warning is-light mb-4">Completed</span>
+                            <div class="mb-2 listing-author">
+                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                <div class="ml-2"><b>HidethePain</b> is buying:</div>
                             </div>
-                        </div>
-                        <div class="column is-two-fifths">
-                            <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                            <h1 class='title'>Bishan Nightlife</h1>
+                            <p class="subtitle">Explore the night life of Bishan</p>
                         </div>
                     </div>
-                </a>
-            </div>
-        </div>
-        <!--END: Card-->
-        <!--START: Card -->
-        <div class='container mt-5'>
-            <div class='box p-5'>
-                <a href="{{ url_for('business') }}">
-                    <div class="columns is-vcentered">
-                        <div class="column">
-                            <div class="ml-4">
-                                <span class="tag is-info is-light mb-4">Planning</span>
-                                <span class="tag is-success is-light mb-4">Confirmed</span>
-                                <span class="tag is-warning is-light mb-4">Completed</span>
-                                <div class="mb-2 listing-author">
-                                    <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                    <div class="ml-2"><b>HidethePain</b> is buying:</div>
-                                </div>
-                                <h1 class='title'>Bishan Nightlife</h1>
-                                <p class="subtitle">Explore the night life of Bishan</p>
-                            </div>
-                        </div>
-                        <div class="column is-two-fifths">
-                            <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
-                        </div>
+                    <div class="column is-two-fifths">
+                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
                     </div>
-                </a>
-            </div>
+                </div>
+            </a>
         </div>
-        <!--END: Card-->
-        </div>
-    </section>
+    </div>
+    <!--END: Card-->
+    </div>
+</section>
 
 
 {% endblock %}
