--- a/templates/tourGuides/editListing.html
+++ b/templates/tourGuides/editListing.html
@@ -5,150 +5,144 @@
 
 
 {% block content %}
-    <section id="discover-hero" class="hero is-medium is-info is-bold">
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
-                    Edit your Listing <i class="fas fa-book"></i>
-                </h1>
-                <h2 class="subtitle is-size-4">
-                    Perfect your Listings
-                </h2>
-            </div>
-            <br>
-        </div>
-    </section>
+<section class="section has-background-white">
+    <div class="container">
+        <h1 class="is-size-1 has-text-weight-bold mt-6">Editing listing: <span
+                class="has-text-weight-light">{{listing.tour_name}}</span></h1>
+    </div>
+</section>
 
-    <section class='section'>
+<section class='section'>
+    <div class="container">
+        <form class="form-horizontal" enctype="multipart/form-data" action="/listings/edit/{{ listing['_id'] }}"
+            method="POST">
+            {{ form.csrf_token }}
+            <fieldset>
 
-        <div class='columns is-centered'>
-            <div class='column is-half'>
-                <div class='box'>
-                    <form class="form-horizontal" enctype="multipart/form-data"
-                          action="/listings/edit/{{ listing['_id'] }}" method="POST">
-                        {{ form.csrf_token }}
-                        <fieldset>
+                <legend class='label'>Tour Name</legend>
 
-                            <legend class='label'>Tour Name</legend>
-
-                            <div class="field">
-                                <label class="label" for="tour-name"></label>
-                                <div class="control">
-                                    {{ form.tour_name(id="tour-name", type="text", class="input", placeholder="Bishan Eco-walk", value=listing.tour_name) }}
-                                    <ul>
-                                        {% for error in form.tour_name.errors %}
-                                            <li class="has-text-danger"> {{ error }}</li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            </div>
+                <div class="field">
+                    <label class="label" for="tour-name"></label>
+                    <div class="control">
+                        {{ form.tour_name(id="tour-name", type="text", class="input", placeholder="Bishan Eco-walk",
+                        value=listing.tour_name) }}
+                        <ul>
+                            {% for error in form.tour_name.errors %}
+                            <li class="has-text-danger"> {{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
 
 
-                            <label class="label" for="tour-img">Tour Image</label>
-                            <div class="file">
-                                <label class="file-label">
-                                    {{ form.tour_img(class="file-input", type="file", onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;", value=listing.tour_img ) }}
-                                    <span class="file-cta">
+                <label class="label" for="tour-img">Tour Image</label>
+                <div class="file">
+                    <label class="file-label">
+                        {{ form.tour_img(class="file-input", type="file", onchange="if (this.files.length > 0)
+                        document.getElementById('filename-tour-img').innerHTML = this.files[0].name;",
+                        value=listing.tour_img ) }}
+                        <span class="file-cta">
                             <span class="file-icon">
                                 <i class="fa fa-upload"></i>
                             </span>
                             <span class="file-label" id="filename-tour-img">
                                 Choose a file…
                             </span>
-                            </span>
-                                    <ul>
-                                        {% for error in form.tour_img.errors %}
-                                            <li class="has-text-danger"> {{ error }}</li>
-                                        {% endfor %}
-                                    </ul>
-                                </label>
-                            </div>
-
-                            <div class="field">
-                                <label class="label" for="tour-desc">Tour Description</label>
-                                <div class="control">
-                                    {{ form.tour_desc(class='textarea', id="tour-desc") }}
-                                    <ul>
-                                        {% for error in form.tour_desc.errors %}
-                                            <li class="has-text-danger"> {{ error }}</li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            </div>
-
-
-                            <label class="label" for="tour-items">Tour itinerary</label>
-                            <div class="field has-addons">
-                              <div class="control">
-                                <a class="button is-static">
-                                  Add Itinerary
-                                </a>
-                              </div>
-                              <div class="control is-expanded">
-                                {{ form.tour_items(class='input', id='tour-items', placeholder='Visit famous museum at Newton: Newton War Memorial Museum', type='text', value=listing.tour_itinerary[0]) }}
-                              </div>
-                            </div>
-
-
-                            <div class="field">
-                              <label class="label" for="tour-loc">Tour Location</label>
-                              <div class="control has-icons-left">
-                                  <div class="select">
-                                      {{ form.tour_loc(id="tour-loc", value=listing.tour_location[0]) }}
-                                  </div>
-                                    <ul>
-                                        {% for error in form.tour_desc.errors %}
-                                            <li class="has-text-danger"> {{ error }}</li>
-                                        {% endfor %}
-                                    </ul>
-                                  <span class="icon is-large is-left">
-                                        <i class="fas fa-globe"></i>
-                                  </span>
-
-                              </div>
-                            </div>
-
-
-                            <div class="field">
-                                <label class="label" for="tour-revs">Maximum Tour Revisions</label>
-                                <div class="control">
-                                    {{ form.tour_revisions(id="tour-revs", type="number", class="input", value=listing.tour_revisions) }}
-                                    <ul>
-                                        {% for error in form.tour_revisions.errors %}
-                                            <li class="has-text-danger"> {{ error }}</li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            </div>
-
-
-                            <div class="field">
-                                <label class="label" for="tour-price">Minimum Price ($SGD)</label>
-                                <div class="control">
-                                    {{ form.tour_price(id="tour-price", type="number", class="input", placeholder="120", value=listing.tour_price ) }}
-                                    <ul>
-                                        {% for error in form.tour_price.errors %}
-                                            <li class="has-text-danger"> {{ error }}</li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            </div>
-
-
-                            <div class="field">
-                                <label class="label" for="tour-submit"></label>
-                                <div class="control">
-                                    <input type='submit' value='Update!' id="tour-submit" name="tour-submit"
-                                           class="button is-success">
-                                </div>
-                            </div>
-
-                        </fieldset>
-                    </form>
+                        </span>
+                        <ul>
+                            {% for error in form.tour_img.errors %}
+                            <li class="has-text-danger"> {{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </label>
                 </div>
-            </div>
-        </div>
-    </section>
+
+                <div class="field">
+                    <label class="label" for="tour-desc">Tour Description</label>
+                    <div class="control">
+                        {{ form.tour_desc(class='textarea', id="tour-desc") }}
+                        <ul>
+                            {% for error in form.tour_desc.errors %}
+                            <li class="has-text-danger"> {{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+
+
+                <label class="label" for="tour-items">Tour itinerary</label>
+                <div class="field has-addons">
+                    <div class="control">
+                        <a class="button is-static">
+                            Add Itinerary
+                        </a>
+                    </div>
+                    <div class="control is-expanded">
+                        {{ form.tour_items(class='input', id='tour-items', placeholder='Visit famous museum at Newton:
+                        Newton War Memorial Museum', type='text', value=listing.tour_itinerary[0]) }}
+                    </div>
+                </div>
+
+
+                <div class="field">
+                    <label class="label" for="tour-loc">Tour Location</label>
+                    <div class="control has-icons-left">
+                        <div class="select">
+                            {{ form.tour_loc(id="tour-loc", value=listing.tour_location[0]) }}
+                        </div>
+                        <ul>
+                            {% for error in form.tour_desc.errors %}
+                            <li class="has-text-danger"> {{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                        <span class="icon is-large is-left">
+                            <i class="fas fa-globe"></i>
+                        </span>
+
+                    </div>
+                </div>
+
+
+                <div class="field">
+                    <label class="label" for="tour-revs">Maximum Tour Revisions</label>
+                    <div class="control">
+                        {{ form.tour_revisions(id="tour-revs", type="number", class="input",
+                        value=listing.tour_revisions) }}
+                        <ul>
+                            {% for error in form.tour_revisions.errors %}
+                            <li class="has-text-danger"> {{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="field">
+                    <label class="label" for="tour-price">Minimum Price ($SGD)</label>
+                    <div class="control">
+                        {{ form.tour_price(id="tour-price", type="number", class="input", placeholder="120",
+                        value=listing.tour_price ) }}
+                        <ul>
+                            {% for error in form.tour_price.errors %}
+                            <li class="has-text-danger"> {{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="field">
+                    <label class="label" for="tour-submit"></label>
+                    <div class="control">
+                        <input type='submit' value='Update {{listing.tour_name}}' id="tour-submit" name="tour-submit"
+                            class="button is-success">
+                    </div>
+                </div>
+
+            </fieldset>
+        </form>
+    </div>
+</section>
 
 
 {% endblock %}
