Bring tourisit ID into the new era because f*** boxes

--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -1,22 +1,20 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-    <script defer src="/js/interface/signup.js"></script>
+<link rel="stylesheet" href="/css/pages/id.css">
 {% endblock %}
 
 {% block content %}
-    <section id="discover-hero" class="hero is-medium is-black">
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
-                    Tourisit ID
-                </h1>
-                <h2 class="subtitle is-size-4">
-                    Your pass to local tours, by locals.
-                </h2>
-            </div>
-        </div>
-    </section>
+<section id="hero-box" class="section">
+    <div id="hero-content" class="container box has-text-centered discover-hero">
+        <h1 class="title has-text-weight-bold has-text-white" style="font-size: 4rem;">
+            tourisit<span class="has-text-weight-light">ID</span>
+        </h1>
+        <h2 class="subtitle is-size-4 has-text-light">
+            Your pass to local tours, by locals.
+        </h2>
+    </div>
+</section>
 
     <section class="section">
         <div class="container" id="main">
