--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,20 +1,18 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-    <link rel="stylesheet" href="/css/global/index.css">
+    <link rel="stylesheet" href="/css/pages/id.css">
 {% endblock %}
 
 {% block content %}
-    <section id="discover-hero" class="hero is-medium is-black">
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
-                    Tourisit ID
-                </h1>
-                <h2 class="subtitle is-size-4">
-                    Your pass to local tours, by locals.
-                </h2>
-            </div>
+    <section id="hero-box" class="section">
+        <div id="hero-content" class="container box has-text-centered discover-hero">
+            <h1 class="title has-text-weight-bold has-text-white" style="font-size: 4rem;">
+                tourisit<span class="has-text-weight-light">ID</span>
+            </h1>
+            <h2 class="subtitle is-size-4 has-text-light">
+                Your pass to local tours, by locals.
+            </h2>
         </div>
     </section>
 
