--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,7 +24,7 @@
                                 <div class="field">
                                     <label class="label" for="bio">Bio:</label>
                                     <div class="control" readonly>
-                                        {{ form.bio(id="bio", type="textarea", class="input", rows="5" ,placeholder=user.bio) }}
+                                        {{ form.bio(id="bio", type="textarea", class="input", rows="5" ,placeholder=user.bio, style="height:160px;") }}
                                         <ul>
                                             {% for error in form.bio.errors %}
                                                 <li class="has-text-danger"> {{ error }}</li>
@@ -57,7 +57,7 @@
                             <div class="field">
                                 <label class="label" for="bio">Bio:</label>
                                 <div class="control">
-                                    {{ form.bio(id="bio", type="textarea", class="input", rows="5" ,placeholder=user.bio) }}
+                                    {{ form.bio(id="bio", type="textarea", class="input", rows="5" ,placeholder=user.bio, style="height:160px;") }}
                                     <ul>
                                         {% for error in form.bio.errors %}
                                             <li class="has-text-danger"> {{ error }}</li>
