--- a/templates/tourGuides/editListing.html
+++ b/templates/tourGuides/editListing.html
@@ -1,31 +1,165 @@
 {% extends 'baseTour.html' %}
 
 {% block scripts %}
+<link rel="stylesheet" href="/css/global/shop.css">
+<link rel="stylesheet" href="/css/pages/index.css">
+<script src='/js/form-persistence.js'></script>
+<script>
+
+    let listno = 0
+    let locno = 0
+    var persisteditemList = Array.from({{ listing.tour_itinerary | tojson }})
+    var persistedlocList = Array.from({{ listing.tour_location | tojson }})
+    var itemList = []
+    var locList = []
+    var locationTags = document.getElementById('locations')
+
+    function AppendtoLocation() {
+        var loc = document.getElementById('tour-loc').value
+        current_locs = document.getElementById('locations')
+
+        // var template = 
+        // `
+        //     <span class="tag is-info">${loc}</span>
+        // `
+
+        // var template = 
+        // `
+        //     <span class="tag is-info">${loc}<a onclick="locList.splice(${locno}, 1, 'None'); current_locs.removeChild(template)>here</a></span>
+        // `
+
+        var template = document.createElement('span')
+        template.className = "tag is-info"
+        // template.id = `loc_${locno}`
+        template.textContent = loc
+        current_locs.appendChild(template)
+
+
+        let removeElement = document.createElement('a');
+        removeElement.textContent = '\u274c';
+        removeElement.id = locno
+        removeElement.addEventListener('click', () => {
+            current_locs.removeChild(template)
+            console.log(`Loc no is: ${locno}`)
+            locList.splice(removeElement.id, 1, 'None')
+            AppendtoLocationList()
+        });
+        template.appendChild(removeElement);
+
+        // current_locs.innerHTML += template
+        locList.push(loc + '#$%^#')
+        console.log(locList)
+
+        locno += 1
+
+    }
+
+
+    function AppendtoLocationList() {
+        current_list = document.getElementById('tour-locations-list')
+        current_list.value = Array.from(locList)
+        console.log(current_list)
+    }
+
+    function AppendtoItem() {
+        current_list = document.getElementById('tour-item-list')
+        current_list.value = Array.from(itemList)
+        console.log(current_list)
+        console.log(current_list)
+    }
+
+
+    function UpdateItems() {
+        document.getElementById("addItemButton").click()
+    }
+
+    // Must click the add listing button in order to get the updated version 
+    $('#makeListingForm').submit(() => {
+        UpdateItems()
+        return true;
+    });
+
+
+
+    window.onbeforeunload = () => {
+        Persistence()
+    }
+
+
+    function AddItinerary() {
+        // Dont delete element from array, but replace with 'None' instead. So can still continue to use the indexing
+        current_item = document.getElementById('tour-items')
+        text =
+            `
+                <li id='list_${listno}'>
+                    <div class="field has-addons" >
+                        <div class="control is-expanded">
+                            <input id='item_${listno}' class='input' type=text value="${current_item.value}" onkeyup="$('#item_${listno}').val($('#item_${listno}').val()); console.log($('#item_${listno}').val()); itemList.splice(${listno}, 1, $('#item_${listno}').val() + '#$%^#')">
+                        </div>
+                        <div class="control">
+                            <button class="button" onclick="$('#list_${listno}').remove();itemList.splice(${listno}, 1, 'None');AppendtoItem()">
+                                Delete
+                            </button>
+                        </div>
+                    </div>
+                </li>
+            `
+        $("#itinerary-list").append(`${text}`)
+        itemList.push(current_item.value + '#$%^#')
+        current_item.value = ''
+        listno += 1
+    }
+
+    // To return the itinerary from a previously defined listing
+    // tour_item is a single tour itinerary
+    function AddItineraryFromList(tour_item) {
+        text =
+            `
+                <li id='list_${listno}'>
+                    <div class="field has-addons" >
+                        <div class="control is-expanded">
+                            <input id='item_${listno}' class='input' type=text value="${tour_item}" onkeyup="$('#item_${listno}').val($('#item_${listno}').val()); console.log($('#item_${listno}').val()); itemList.splice(${listno}, 1, $('#item_${listno}').val() + '#$%^#')">
+                        </div>
+                        <div class="control">
+                            <button class="button" onclick="$('#list_${listno}').remove();itemList.splice(${listno}, 1, 'None');AppendtoItem()">
+                                Delete
+                            </button>
+                        </div>
+                    </div>
+                </li>
+            `
+        $("#itinerary-list").append(`${text}`)
+        itemList.push(tour_item + '#$%^#')
+        listno += 1
+    }
+
+</script>
+
+
+
 {% endblock %}
 
-
 {% block content %}
+{% from "_formhelper.html" import render_field %}
 <section class="section has-background-white">
     <div class="container">
-        <h1 class="is-size-1 has-text-weight-bold mt-6">Editing listing: <span
-                class="has-text-weight-light">{{listing.tour_name}}</span></h1>
+        <h1 class="is-size-1 has-text-weight-bold mt-6">Edit Listing: {{ listing['tour_name'] }}</h1>
     </div>
 </section>
 
 <section class='section'>
     <div class="container">
-        <form class="form-horizontal" enctype="multipart/form-data" action="/listings/edit/{{ listing['_id'] }}"
-            method="POST">
+        <form id='makeListingForm' class="form-horizontal" enctype="multipart/form-data"
+            action="{{ url_for('makelisting') }}" method="POST">
             {{ form.csrf_token }}
             <fieldset>
 
                 <legend class='label'>Tour Name</legend>
 
                 <div class="field">
-                    <label class="label" for="tour-name"></label>
+
                     <div class="control">
-                        {{ form.tour_name(id="tour-name", type="text", class="input", placeholder="Bishan Eco-walk",
-                        value=listing.tour_name) }}
+                        {{ form.tour_name(id="tour-name", type="text", class="input", value = listing.tour_name ) }}
                         <ul>
                             {% for error in form.tour_name.errors %}
                             <li class="has-text-danger"> {{ error }}</li>
@@ -35,32 +169,43 @@
                 </div>
 
 
-                <label class="label" for="tour-img">Tour Image</label>
-                <div class="file">
-                    <label class="file-label">
-                        {{ form.tour_img(class="file-input", type="file", onchange="if (this.files.length > 0)
-                        document.getElementById('filename-tour-img').innerHTML = this.files[0].name;",
-                        value=listing.tour_img ) }}
-                        <span class="file-cta">
-                            <span class="file-icon">
-                                <i class="fa fa-upload"></i>
+                <legend class='label'>Tour Image</legend>
+                <div class='field'>
+                    <div class="file has-name is-boxed">
+                        <label class="file-label">
+                            {{ form.tour_img(class="file-input", id='uploadImg', type="file", onchange="if
+                            (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML =
+                            this.files[0].name;") }}
+                            <span class="file-cta">
+                                <span class="file-icon">
+                                    <i class="fas fa-upload"></i>
+                                </span>
+                                <span class="file-label">
+                                    Upload an Image...
+                                </span>
                             </span>
-                            <span class="file-label" id="filename-tour-img">
-                                Choose a file…
+                            <span class="file-name" id='filename-tour-img'>
+
                             </span>
-                        </span>
-                        <ul>
-                            {% for error in form.tour_img.errors %}
-                            <li class="has-text-danger"> {{ error }}</li>
-                            {% endfor %}
-                        </ul>
-                    </label>
+                        </label>
+                    </div>
                 </div>
 
+                {% for error in form.tour_img.errors %}
+                <li class="has-text-danger"> {{ error }}</li>
+                {% endfor %}
+
+                <div>
+                    <img id="currentImg" />
+                </div>
+
+
+
+
+                <label class="label" for="tour-desc">Tour Description</label>
                 <div class="field">
-                    <label class="label" for="tour-desc">Tour Description</label>
                     <div class="control">
-                        {{ form.tour_desc(class='textarea', id="tour-desc") }}
+                        {{ form.tour_desc(class='textarea', id="tour-desc", value=listing.tour_desc) }}
                         <ul>
                             {% for error in form.tour_desc.errors %}
                             <li class="has-text-danger"> {{ error }}</li>
@@ -73,41 +218,59 @@
                 <label class="label" for="tour-items">Tour itinerary</label>
                 <div class="field has-addons">
                     <div class="control">
-                        <a class="button is-static">
+                        <a id='addItemButton' class="button" onclick="AddItinerary();AppendtoItem()">
                             Add Itinerary
                         </a>
                     </div>
                     <div class="control is-expanded">
-                        {{ form.tour_items(class='input', id='tour-items', placeholder='Visit famous museum at Newton:
-                        Newton War Memorial Museum', type='text', value=listing.tour_itinerary[0]) }}
+                        {{ form.tour_items(class='input', id='tour-items', placeholder='Visit famous museum at Newton: Newton War Memorial Museum', type='text') }}
                     </div>
                 </div>
 
 
-                <div class="field">
-                    <label class="label" for="tour-loc">Tour Location</label>
-                    <div class="control has-icons-left">
-                        <div class="select">
-                            {{ form.tour_loc(id="tour-loc", value=listing.tour_location[0]) }}
-                        </div>
-                        <ul>
-                            {% for error in form.tour_desc.errors %}
-                            <li class="has-text-danger"> {{ error }}</li>
-                            {% endfor %}
-                        </ul>
-                        <span class="icon is-large is-left">
-                            <i class="fas fa-globe"></i>
-                        </span>
+                <div>
+                    <ol id='itinerary-list'></ol>
+                </div>
 
+
+                <div class='field'>
+                    <div class='control'>
+                        <input name='tour_items_list[]' , class='input' , id='tour-item-list' , type='hidden'>
                     </div>
                 </div>
 
 
-                <div class="field">
-                    <label class="label" for="tour-revs">Maximum Tour Revisions</label>
+                <label class="label" for="tour-loc">Tour Location</label>
+                <div class="field has-addons">
                     <div class="control">
-                        {{ form.tour_revisions(id="tour-revs", type="number", class="input",
-                        value=listing.tour_revisions) }}
+                        <a class="button" onclick='AppendtoLocation(); AppendtoLocationList()'>
+                            Add Location
+                        </a>
+                    </div>
+                    <div class='control select'>
+                        {{ form.tour_loc(id="tour-loc") }}
+                    </div>
+                </div>
+
+                <div id='locations'></div>
+
+                <ul>
+                    {% for error in form.tour_desc.errors %}
+                    <li class="has-text-danger"> {{ error }}</li>
+                    {% endfor %}
+                </ul>
+
+                <div class='field'>
+                    <div class='control'>
+                        <input name='tour_locations_list[]' , class='input' , id='tour-locations-list' , type='hidden'>
+                    </div>
+                </div>
+
+
+                <label class="label" for="tour-revs">Maximum Tour Revisions</label>
+                <div class="field">
+                    <div class="control">
+                        {{ form.tour_revisions(id="tour-revs", type="number", class="input", value=listing.tour_revisions ) }}
                         <ul>
                             {% for error in form.tour_revisions.errors %}
                             <li class="has-text-danger"> {{ error }}</li>
@@ -117,11 +280,10 @@
                 </div>
 
 
+                <label class="label" for="tour-price">Minimum Price ($SGD)</label>
                 <div class="field">
-                    <label class="label" for="tour-price">Minimum Price ($SGD)</label>
                     <div class="control">
-                        {{ form.tour_price(id="tour-price", type="number", class="input", placeholder="120",
-                        value=listing.tour_price ) }}
+                        {{ form.tour_price(id="tour-price", type="number", class="input", value=listing.tour_price) }}
                         <ul>
                             {% for error in form.tour_price.errors %}
                             <li class="has-text-danger"> {{ error }}</li>
@@ -132,10 +294,9 @@
 
 
                 <div class="field">
-                    <label class="label" for="tour-submit"></label>
                     <div class="control">
-                        <input type='submit' value='Update {{listing.tour_name}}' id="tour-submit" name="tour-submit"
-                            class="button is-success">
+                        <input type='submit' value='List tour' id="tour-submit" name="tour-submit" class="button is-success"
+                            onclick=updateItems()>
                     </div>
                 </div>
 
@@ -144,5 +305,30 @@
     </div>
 </section>
 
+<script>
+    persisteditemList.forEach(AddItineraryFromList)
+    console.log('Done!')
 
+
+    var picture = null
+
+    function toBase64(file) {
+        var reader = new FileReader()
+        reader.readAsDataURL(file)
+        reader.onload = function () {
+            picture = reader.result
+            $('#currentImg').attr('src', reader.result);
+        }
+        reader.onerror = function (error) {
+            console.log('Error: ', error)
+        }
+    }
+
+    $("#uploadImg").change(() => {
+        flag = toBase64($("#uploadImg").prop('files')[0])
+        console.log('this worked')
+    });
+
+
+</script>
 {% endblock %}
