--- a/templates/tourGuides/makelisting.html
+++ b/templates/tourGuides/makelisting.html
@@ -299,8 +299,7 @@
                         </a>
                     </div>
                     <div class="control is-expanded">
-                        {{ form.tour_items(class='input', id='tour-items', placeholder='Visit famous museum at Newton:
-                        Newton War Memorial Museum', type='text') }}
+                        {{ form.tour_items(class='input', id='tour-items', placeholder='Visit famous museum at Newton: Newton War Memorial Museum', type='text') }}
                     </div>
                 </div>
 
