--- a/templates/tourGuides/makelisting.html
+++ b/templates/tourGuides/makelisting.html
@@ -372,7 +372,7 @@
                 <div class="field">
                     <div class="control">
                         <input type='submit' value='List tour' id="tour-submit" name="tour-submit" class="button is-success"
-                            onclick=updateItems()>
+                            onclick=UpdateItems()>
                     </div>
                 </div>
 
