--- a/templates/customer/booking.html
+++ b/templates/customer/booking.html
@@ -41,7 +41,7 @@
             <div class="listing-author">
                 <!--dynamic tg photo-->
                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                <div class="ml-2">By <b>{{ tour.tg_name }}</b></div>
+                <div class="ml-2">By <b>{{ tour.tg_uid| user_name }}</b></div>
             </div>
 
         </div>
