--- a/templates/customer/book-now.html
+++ b/templates/customer/book-now.html
@@ -14,6 +14,7 @@
             <div class="column is-two-fifths">
                 <div class="container box">
                     <!--START: Customise tour button-->
+                    <form id="custom_form" method="POST" action="{{ url_for('book_now', tour_id=tour_id) }}">
                     <div class="field">
                         <div class="control">
                             <a href="">
@@ -23,6 +24,7 @@
                             </a>
                         </div>
                     </div>
+                    </form>
                     <!--END: Customise tour button-->
                     <div class="divider">OR</div>
                     <!--START: Book now form-->
