--- a/templates/tourGuides/business.html
+++ b/templates/tourGuides/business.html
@@ -4,10 +4,10 @@
 
 {% block scripts %}
     <link rel="stylesheet" href="/css/global/shop.css">
-    <link rel="stylesheet" href="/css/bulma-timeline.min.css">
-    <link rel="stylesheet" href="/css/bulma-steps.css">
-    <link rel="stylesheet" href="/css/chat.css">
-    <link rel="stylesheet" href="/css/bulma-badge.css">
+    <link rel="stylesheet" href="/css/frameworks/bulma-timeline.min.css">
+    <link rel="stylesheet" href="/css/frameworks/bulma-steps.css">
+    <link rel="stylesheet" href="/css/pages/chat.css">
+    <link rel="stylesheet" href="/css/frameworks/bulma-badge.css">
 {% endblock %}
 
 
@@ -16,7 +16,7 @@
     <section class='section mb-0 pb-0'>
         <div class="container mt-5 p-5">
             <a href="{{ url_for('all_businesses') }}"><i class="fas fa-chevron-left"></i>&ensp;Back to My Business</a>
-            <h1 class="title is-size-1 m-0">Bishan Nightlife</h1>
+            <h1 class="title is-size-1 m-0">{{ tour.tour_name }}</h1>
             <!--START: More options dropdown-->
             <div class="dropdown post-options is-hoverable is-right is-pulled-right">
                 <div class="dropdown-trigger">
@@ -36,9 +36,15 @@
             </div>
             <!--END: More options dropdown-->
             <div class="listing-author">
-                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                <div class="ml-2">By <b>HidethePain</b></div>
+                <!-- <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{tour.tg_img}}')">
+                </div> -->
+                <div class="ml-2"><b>{{ booking.cust_uid| user_name }}</b> <span>is buying:</span></div>
             </div>
+            <!-- <div class="listing-author">
+                <div class="ml-2">Customer: 
+                    <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{tour.tg_img}}');"></div>
+                    <b>{{ booking.cust_uid| user_name }}</b></div>
+            </div> -->
 
         </div>
     </section>
@@ -241,7 +247,7 @@
                                 </div>
                             </div>
                             <footer class="card-footer">
-                                <p class="m-4">4 free Revision(s) remaining.</p>
+                                <p class="m-4">{{tour.tour_revisions}} free Revision(s) remaining.</p>
                             </footer>
                         </div>
                     </div>
@@ -257,15 +263,11 @@
             <div class='columns my-5 is-vcentered'>
                 <div class='column'>
                     <h2 class='is-size-4'><b>About this Tour</b></h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                        been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-                        a galley of type and scrambled it to make a type specimen book. It has survived not only
-                        five centuries, but also the leap into electronic typesetting, remaining essentially
-                        unchanged. </p>
-                    <p class="mt-5 is-size-6"><a href="">Edit Listing</a></p>
+                    <p>{{tour.tour_desc}}</p>
+                    <p class="mt-5 is-size-6"><a href="/listings/edit/{{ tour['_id'] }}">Edit Listing</a></p>
                 </div>
                 <div class='column'>
-                    <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                    <div class="box listing-img" style="background-image: url('data:image/jpeg;base64, {{ tour.tour_img }}');"></div>
                 </div>
             </div>
             <!--END: About-->
@@ -305,7 +307,7 @@
                                 <header class="timeline-header">
                                     <span class="tag is-medium is-success">Start</span>
                                 </header>
-                                <div class="timeline-item">
+                                <!-- <div class="timeline-item">
                                     <div class="timeline-marker is-icon">
                                         <i class="fas fa-map-marker-alt"></i>
                                     </div>
@@ -336,7 +338,15 @@
                                         <p class="heading">Location</p>
                                         <p>Activity</p>
                                     </div>
+                                </div> -->
+                                {% for item in tour.tour_itinerary %}
+                                <div class="timeline-item">
+                                    <div class="timeline-marker"></div>
+                                    <div class="timeline-content">
+                                        <p>{{item}}</p>
+                                    </div>
                                 </div>
+                                {% endfor %}
                                 <div class="timeline-header">
                                     <span class="tag is-medium is-success">End</span>
                                 </div>
@@ -348,22 +358,22 @@
                             <table class='table'>
                                 <tr>
                                     <td><i class="far fa-calendar"></i>&ensp;<b>Date & Time</b></td>
-                                    <td>27/11/20, 6pm</td>
+                                    <td>{{ booking.book_date }}, {{booking.book_time}}</td>
                                 </tr>
                                 <tr>
                                     <td><i class="fas fa-map-marker-alt"></i>&ensp;<b>Meetup Point</b></td>
-                                    <td>Bishan MRT Station</td>
+                                    <td>{{tour.tour_itinerary[0]}}</td>
                                 </tr>
                                 <tr>
                                     <td><i class="fas fa-hourglass-half"></i>&ensp;<b>Duration</b></td>
-                                    <td>4 hours</td>
+                                    <td>{{booking.book_duration}}</td>
                                 </tr>
                             </table>
                         </div>
                     </div>
                     <!--END: Info Table-->
                     <div class="is-pulled-right">
-                        <span class="tag is-size-4">Price: $1000</span><br>
+                        <span class="tag is-size-4">Price: ${{booking.book_charges['baseprice']}}</span><br>
                         {% if process_step == 2 or process_step == 4 %}
                             <a class="has-text-link is-size-7 pl-6" onclick="openTab(event,'Charges')">Edit Charges</a>
                         {% endif %}
@@ -655,6 +665,10 @@
                 {% if 2 <= process_step <= 4 %}
                     <!--START: Display proposed cost-->
                     <div class="container box">
+                        <div class="heading">Tour Price</div>
+                        <div class="title">{{booking.book_charges['baseprice']}}</div>
+                    </div>
+                    <!-- <div class="container box">
                         <div class="heading">Base Price</div>
                         <div class="title">$148.50</div>
                     </div>
@@ -687,17 +701,29 @@
                             </tr>
                             </tbody>
                         </table>
-                    </div>
+                    </div> -->
                     <!--END: Display proposed cost-->
                 {% endif %}
                 <div class="columns">
                     <div class="column">
                         <h1 class="is-size-3 has-text-centered has-text-weight-semibold">Charges</h1>
                         <br>
+                        {% if booking.book_charges['customfee'] != 0 %}
                         <div class="container box">
-                            <div class="heading">Booking Fee</div>
-                            <div class="title">$16.50 <span class="tag is-success is-light">Paid</span></div>
+                            <div class="heading">Customisation Fee</div>
+                            <div class="title">${{booking.book_charges['customfee']}} <span class="tag is-success is-light">Paid</span></div>
                         </div>
+                        {% endif %}
+                        {% if process_step >= 5 %}
+                        <div class="container box">
+                            <div class="heading">Tour Price</div>
+                            <div class="title">${{booking.book_charges['baseprice']}} 
+                                {% if process_step > 5%}
+                                <span class="tag is-success is-light">Paid</span>
+                                {% endif %}
+                            </div>
+                        </div>
+                        {% endif %}
                     </div>
                     <div class="column">
                         <h1 class="is-size-3 has-text-centered has-text-weight-semibold">Summary</h1>
@@ -710,7 +736,7 @@
                         {% elif process_step >= 5 %}
                             <div class="container box">
                                 <div class="heading">Final Cost</div>
-                                <div class="title">$165
+                                <div class="title">${{booking.book_charges['baseprice']+booking.book_charges['customfee']}}
                                     {% if process_step >=6 %}
                                         <span class="tag is-success is-light">Paid</span>
                                     {% endif %}
